force-app/main/default/objects/opd_bill__c/opd_bill__c.object-meta.xml
<CustomObject>
    <label>opd_bill</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>opd_bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>