force-app/main/default/objects/opd_bill__c/fields/consultantId__c.field-meta.xml
<CustomField>
    <fullName>consultantId__c</fullName>
    <label>consultantId</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>