force-app/main/default/objects/opd_bill__c/fields/paid__c.field-meta.xml
<CustomField>
    <fullName>paid__c</fullName>
    <label>paid</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>